# bq-baseball

./: README.md  create_schema.sh  create_schema_lahman.sh  create_schema_origin.sh  create_schema_retrosheet.sh  environment.py  load_data_lahman.py  load_data_origin.py  load_data_retrosheet.py  pyproject.toml  requirements.txt
dataset/: __init__.py
dataset/lahman/: __init__.py
dataset/origin/: __init__.py
dataset/retrosheet/: __init__.py
gcp/: __init__.py  bq.py
schema/lahman_baseball_database/: all_star_full.json  appearances.json  awards_managers.json  awards_players.json  awards_share_managers.json  awards_share_players.json  batting.json  batting_post.json  college_playing.json  fielding.json  fielding_of.json  fielding_of_split.json  fielding_post.json  hall_of_fame.json  home_games.json  managers.json  managers_half.json  parks.json  people.json  pitching.json  pitching_post.json  salaries.json  schools.json  series_post.json  teams.json  teams_franchises.json  teams_half.json
schema/origin/: parkfactor.json  run_expectancy.json  run_value.json
schema/retrosheet/: events.json  games.json
