[tool.poetry]
name = "bq-baseball"
version = "0.1.0"
description = "BigQuery Baseball Dataset"
authors = ["Shinichi Nakagawa <spirits.is.my.rader@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
google-cloud-bigquery = "^3.19.0"
click = "^8.1.7"
python-json-logger = "^2.0.7"
pandas = "^2.2.1"
pyarrow = "^15.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
